Create log-in link and apply styling

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ li {
     background-color: rgb(240, 243, 245);
 }
 .header-section {
+    flex-shrink: 1;
     padding: 160px var(--content-horizontal-padding, 30px) 30px;
     font-family: var(--header-font-family);
     font-weight: bold;
@@ -89,8 +90,23 @@ li {
     font-size: 0.7em;
     font-weight: bold;
     padding: 18px 54px;
-    margin: 50px var(--content-horizontal-padding, 30px) 50px;
+    margin: 44px var(--content-horizontal-padding, 30px) 36px;
     box-shadow: 4px 4px 5px rgba(60, 60, 60, 0.2);
+}
+.log-in {
+    font-family: var(--header-font-family);
+    font-size: 0.7em;
+    font-weight: bold;
+    padding: 0px var(--content-horizontal-padding, 30px);
+}
+.log-in-link {
+    color: rgb(37, 110, 37);
+}
+.log-in-link:hover {
+    color: rgb(35, 170, 35);
+}
+.log-in-link:active {
+    color: rgb(18, 71, 18);
 }
 
 .side-panel {
